Removed API key

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5001
 MONGODB_URI=mongodb://127.0.0.1:27017/blogwebsiteai
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4.1-nano-2025-04-14
