Add user authentication and protected routes

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,15 +17,19 @@
     "@langchain/core": "^0.3.75",
     "@langchain/google-genai": "^2.0.1",
     "@langchain/openai": "^0.6.11",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.18.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
