--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 PORT=5001
 MONGODB_URI=mongodb://127.0.0.1:27017/blogwebsiteai
 GOOGLE_AI_API_KEY=
-GOOGLE_AI_MODEL=gemini-1.5-flash
+GOOGLE_AI_MODEL=gemini-flash-latest
 GOOGLE_AI_TEMPERATURE=0.7
